...
    <include
        android:id="@+id/customToolbar"
        layout="@layout/toolbar_title_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp"
        app:layout_constraintBottom_toTopOf="@id/listViewHouseholdMembers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Include the bottom Toolbar (do this for everypage) -->
...
