...
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent">

        <Button
            android:id="@+id/btnImageAccept"
            android:layout_width="@dimen/icon_small_square"
            android:layout_height="@dimen/icon_small_square"
            android:background="@drawable/ic_btn_accept"
            android:backgroundTint="@color/green"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
...
