...
                android:drawableTop="@drawable/ic_btn_plus"
                android:drawableTint="@color/black"
                android:paddingTop="4dp"
                android:text="@string/addDish"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnLinkRecipe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnLinkRecipe" />


            <Button
                android:id="@+id/btnLinkRecipe"
...
